# Translatica

./: .coverage  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  render.yml  requirements.txt  run.py  setup.py  train.py
.github/workflows/: main.yml
app/: main.py
app/api/: routes.py
app/core/: config.py
app/services/: translation.py
app/utils/: logger.py
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  database.py  model.py
backend/app/models/: translation.py
backend/fine-tuned-model/fine-tuned-model/: README.md  adapter_config.json  adapter_model.safetensors
backend/notebook/: Translatica_colab_t5.ipynb
backend/tests/: conftest.py  test_api.py  test_config.py  test_main.py  test_model.py  test_training_data.py  test_training_logger.py  test_training_model.py  test_training_train.py  test_training_trainer.py
backend/training/: __init__.py  data.py  model.py  train.py  trainer.py
fine-tuned-model/fine-tuned-model/: README.md  adapter_model.safetensors  model.safetensors
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/assets/css/: index.css
frontend/src/components/layout/: Footer.tsx  Header.tsx  MainLayout.tsx
frontend/src/components/ui/: Features.tsx
frontend/src/features/translator/: TranslatorCard.tsx
frontend/src/hooks/: useParticles.tsx
frontend/src/services/: api.ts
notebook/: Experiment.ipynb
src/: data.py  logger.py  model.py
static/css/: style.css
static/js/: script.js
templates/: index.html
tests/: conftest.py  test_api.py  test_model.py  test_services.py  test_training_model.py
training/: data.py  logger.py  run_train.py  train.py  trainer.py
